<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smartgifter.controller.DrawerActivity">

    <EditText
        android:id="@+id/input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:hint="@string/event_name_hint"
        android:layout_margin="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/time_details"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/input_title">


        <ImageView
            android:id = "@+id/item_image"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/choose_photo"/>
        <EditText
            android:id="@+id/input_item_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines ="2"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:hint="@string/item_name_hint"
            android:layout_below="@+id/time_details"
            />

    </LinearLayout>
    <EditText
        android:id="@+id/input_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:textSize="20dp"
        android:hint="@string/item_price_hint"
        android:layout_margin="5dp"
        android:layout_below="@+id/time_details"
        />
    <EditText
        android:id="@+id/input_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:hint="@string/event_date_hint"
        android:layout_margin="5dp"
        android:layout_below="@+id/input_price"
        />
    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/description"
        android:lines="3"
        android:minLines="3"
        android:gravity="top|left"
        android:maxLines="10"
        android:textSize="20dp"
        android:hint="@string/item_description_hint"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/input_date"
        />
    <Button
        android:text="Save Event"
        android:id="@+id/button_save_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_centerInParent="true" />
</RelativeLayout>
</ScrollView>

